........S. [ZBX-10759] fixed trigger prototypes status when host become unavailable (Sergejs)
...G....S. [ZBX-10721] made the third parameter (<port>) of "net.tcp.service" optional (Sergejs)
........S. [ZBX-11012] fixed expansion of macro {DISCOVERY.RULE.NAME} (viktors)
..F....... [ZBX-10903] prevented parsing "data-id" values with jQuery "data" method (Cemeris)

--------------------------------------------------------------------------------
Changes for 2.2.14

Bug fixes:
..F....... [ZBX-11023] fixed SQL injection vulnerability in "Latest data" page; thanks to 1N3 at Early Warning Services, LLC (Sasha)

--------------------------------------------------------------------------------
Changes for 2.2.14rc1

Bug fixes:
A......... [ZBX-10933] fixed unexpected overwriting of trigger expressions for unchanged triggers when updating multiple triggers simultaneously via the API trigger.update method (Gunars)
..F....... [ZBX-10866] fixed calendar time for cases when local time zone differs from servers time zone (Cemeris)
..F....... [ZBX-10866] fixed starting value of time selector for events, graphs and screens (Cemeris)
.......PS. [ZBX-10828] fixed server/proxy crashes when performing Simple checks with invalid key parameters hidden in user macro (viktors)
.......PS. [ZBX-10819] fixed server/proxy compilation error on Solaris 10 (viktors)
........S. [ZBX-10723] forced quoting of item key parameter if macro resolution resulted in unquoted parameter with leading spaces (gleb)
.......PS. [ZBX-8096] allowed "noSuchName" to be returned for SNMPv2 and SNMPv3 (asaveljevs)

--------------------------------------------------------------------------------
Changes for 2.2.13

2.2.13rc1 was released as 2.2.13 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.13rc1

New features:
A.F....... [ZBX-1357] updated French, Spanish, Vietnamese translations; thanks to Zabbix translators (zalex_ua)

Bug fixes: